--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
                   <label class="label">
                     <span class="label-text">Amount</span>
                   </label>
-                  <input
+                  <input id="input-add-money"
                     type="text"
                     placeholder="Amount"
                     class="input input-bordered"
@@ -54,7 +54,7 @@
                   <label class="label">
                     <span class="label-text">Pin Number</span>
                   </label>
-                  <input
+                  <input id="input-pin"
                     type="password"
                     placeholder="Pin Number"
                     class="input input-bordered"
@@ -64,7 +64,7 @@
 
                 </div>
                 <div class="form-control mt-6">
-                  <button class="btn btn-primary">Add Money</button>
+                  <button id="btn-add-money" class="btn btn-primary">Add Money</button>
                 </div>
               </form>
             </div>
