added input money to the current money

--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
             <div>
               <div class="stats shadow">
                 <div class="stat">
-                  <div class="stat-value">9400</div>
+                  <div id="account-balance" class="stat-value">9400</div>
                   <div class="stat-desc">Available Balance</div>
                 </div>
               </div>
@@ -52,7 +52,7 @@
                 </div>
                 <div class="form-control">
                   <label class="label">
-                    <span class="label-text">Pin Number</span>
+                    <span class="label-text">Pin</span>
                   </label>
                   <input id="input-pin"
                     type="password"
@@ -73,6 +73,7 @@
         </div>
       </div>
     </main>
-    <script src="./js/home.js"></script>
+    <!-- <script src="./js/home.js"></script> -->
+     <script src="./js/add-money.js"></script>
   </body>
 </html>
