--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
             <div class="divider"></div>
 
             <!--Add Money Form Start-->
-            <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+            <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl hidden">
               <form class="card-body">
                 <div class="form-control">
                   <label class="label">
@@ -69,11 +69,47 @@
               </form>
             </div>
             <!--Add Money Form End-->
+
+            <!--Cash out start-->
+            <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                <form class="card-body">
+                  <div class="form-control">
+                    <label class="label">
+                      <span class="label-text">Cash Out</span>
+                    </label>
+                    <input id="cash-out-money"
+                      type="text"
+                      placeholder="Amount"
+                      class="input input-bordered"
+                      required
+                    />
+                  </div>
+                  <div class="form-control">
+                    <label class="label">
+                      <span class="label-text">Pin</span>
+                    </label>
+                    <input id="cash-out-pin"
+                      type="password"
+                      placeholder="Pin Number"
+                      class="input input-bordered"
+                      autocomplete="off"
+                      required
+                    />
+  
+                  </div>
+                  <div class="form-control mt-6">
+                    <button id="btn-cash-out" class="btn btn-primary">Cash Out</button>
+                  </div>
+                </form>
+              </div>
+            <!--Cash out end-->
+            
           </div>
         </div>
       </div>
     </main>
     <!-- <script src="./js/home.js"></script> -->
      <script src="./js/add-money.js"></script>
+     <script src="./js/cashout.js"></script>
   </body>
 </html>
